# tw-magic-bot-rs

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/handler/: command.rs  parser.rs
