[package]
name = "tw-magic-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.21.0", features = ["rt", "rt-multi-thread", "macros"] }
twitch-irc = "4.0.0"
